[gd_scene load_steps=25 format=3 uid="uid://beg1lhknv7uvx"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_4qne5"]
[ext_resource type="PackedScene" uid="uid://cycj8kg714kx6" path="res://scenes/player.tscn" id="1_ww345"]
[ext_resource type="PackedScene" uid="uid://dfx1lo8cjveo0" path="res://scenes/spawner.tscn" id="3_iuhwm"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="4_6yp7r"]
[ext_resource type="Theme" uid="uid://c387fro1kglks" path="res://default_theme.tres" id="5_ehcgw"]
[ext_resource type="AudioStream" uid="uid://ceuv4iruxcyn7" path="res://assets/music/pixel_sprinter_loop.ogg" id="5_f0udh"]
[ext_resource type="AudioStream" uid="uid://bmpd4lrfuw82d" path="res://assets/sfx/jingle.wav" id="6_j2n5u"]
[ext_resource type="Texture2D" uid="uid://c1d60iml56gl1" path="res://assets/textures/title_sprite.png" id="6_t3ayp"]
[ext_resource type="Texture2D" uid="uid://bwiqe80bgqbjf" path="res://assets/textures/clouds_front.png" id="8_8d154"]
[ext_resource type="AudioStream" uid="uid://d1xg34scpsiol" path="res://assets/sfx/confirm.wav" id="8_al7cb"]
[ext_resource type="Script" path="res://scripts/parallax.gd" id="8_nd6re"]
[ext_resource type="AudioStream" uid="uid://b5xni6ck8wevv" path="res://assets/sfx/cooldown.wav" id="8_ned8e"]
[ext_resource type="Script" path="res://scripts/music.gd" id="8_w4x7d"]
[ext_resource type="Texture2D" uid="uid://bbutfw7xnjdxl" path="res://assets/textures/background.png" id="10_cfa38"]
[ext_resource type="PackedScene" uid="uid://cmhbxsekm42vl" path="res://scenes/confetti.tscn" id="11_w8qma"]
[ext_resource type="Texture2D" uid="uid://c53x6ietbotrs" path="res://assets/textures/cloud_background.png" id="13_5dchn"]

[sub_resource type="Animation" id="Animation_uwyb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainMenu/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cx328"]
resource_name = "blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainMenu/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_30n8r"]
resource_name = "start_off"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainMenu/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, true]
}

[sub_resource type="Animation" id="Animation_28dfa"]
resource_name = "start_on"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/MainMenu/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iyaju"]
_data = {
"RESET": SubResource("Animation_uwyb4"),
"blink": SubResource("Animation_cx328"),
"start_off": SubResource("Animation_30n8r"),
"start_on": SubResource("Animation_28dfa")
}

[sub_resource type="Animation" id="Animation_7hype"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_e2hgx"]
resource_name = "mute"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-7, -0.25, 0, 0.25, 0, -80, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uas8w"]
_data = {
"RESET": SubResource("Animation_7hype"),
"mute": SubResource("Animation_e2hgx")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_4qne5")
time = 68.5

[node name="Player" parent="." instance=ExtResource("1_ww345")]
z_index = 1
position = Vector2(120, 105)

[node name="SpawnerTop" parent="." instance=ExtResource("3_iuhwm")]
position = Vector2(320, 66)

[node name="SpawnerBottom" parent="." instance=ExtResource("3_iuhwm")]
position = Vector2(320, 102)
delay = 0.5

[node name="UI" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource("4_6yp7r")

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_ehcgw")

[node name="Title" type="TextureRect" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.5
offset_top = 14.0
offset_right = 63.5
offset_bottom = 70.0
grow_horizontal = 2
texture = ExtResource("6_t3ayp")

[node name="Label" type="Label" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -35.0
offset_right = 88.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"HeaderMedium"
text = "Press START to play!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/MainMenu"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_iyaju")
}
autoplay = "blink"
speed_scale = 1.167

[node name="Jingle" type="AudioStreamPlayer" parent="UI/MainMenu"]
stream = ExtResource("6_j2n5u")
volume_db = -10.0

[node name="HUD" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_ehcgw")

[node name="Score" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 25.0
grow_horizontal = 0
text = "0"
horizontal_alignment = 2

[node name="Time" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 47.0
offset_bottom = 25.0
text = "0"

[node name="Results" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_ehcgw")

[node name="Title" type="Label" parent="UI/Results"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -61.19
offset_right = 69.0
offset_bottom = -30.1899
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "Final Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="UI/Results"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -35.0
offset_right = 20.0
offset_bottom = -11.9999
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="UI/Results"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -35.0
offset_right = 88.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"HeaderMedium"
text = "Press START!"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Jingle" type="AudioStreamPlayer" parent="UI/Results"]
stream = ExtResource("8_al7cb")
volume_db = -10.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_f0udh")
volume_db = -7.0
autoplay = true
script = ExtResource("8_w4x7d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Music"]
libraries = {
"": SubResource("AnimationLibrary_uas8w")
}

[node name="Countdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ned8e")
volume_db = -8.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 2
script = ExtResource("8_nd6re")
speed = 160.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxForeground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(240, 0)

[node name="CloudsFront" type="Sprite2D" parent="ParallaxForeground/ParallaxLayer"]
position = Vector2(120, 86.845)
texture = ExtResource("8_8d154")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
script = ExtResource("8_nd6re")
speed = 30.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(240, 0)

[node name="Clouds" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(120, 80)
texture = ExtResource("13_5dchn")

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="Confetti" parent="Background" instance=ExtResource("11_w8qma")]
z_index = -99
position = Vector2(121, 77)
emitting = true
one_shot = false

[node name="Background" type="Sprite2D" parent="Background"]
texture = ExtResource("10_cfa38")
centered = false

[connection signal="timeout" from="Timer" to="." method="_time_over"]
